changed gsap.to to gsap.from when possible for clarity, fixed gsap.from initial flicker

--- a/master.scss
+++ b/master.scss
@@ -11,6 +11,14 @@ $serif: "Merriweather", serif;
   box-sizing: border-box;
 }
 
+body {
+  /* undone in window.onload js code, so that content only shows
+  after javascript has ran. this hides from the user
+  the brief flicker in position and opacity that occurs
+  before gsap.from() kicks in. */
+  opacity: 0;
+}
+
 html,body {
   width: 100%;
   height: 100%;
@@ -375,16 +383,17 @@ main#main-home {
       text-align: center;
       width: 100%;
       margin: auto;
-      // margin-top: 30px;
       max-width: 500px;
       h1 {
         color: white;
         margin-bottom: 40px;
+        will-change: transform, opacity;
       }
       p {
         color: white;
         margin-bottom: 50px;
         max-width: 370px;
+        will-change: transform, opacity;
       }
     }
     #home-svg {
@@ -459,7 +468,6 @@ main#main-home {
           height: 100%;
         }
         .front {
-          opacity: 0;
           transform: translate(5px, 5px);
           color: white;
           text-align: center;
@@ -480,8 +488,7 @@ main#main-home {
           }
         }
         .back {
-          opacity: 0;
-          transform: translate(0, 0);
+          transform: translate(-5px, -5px);
         }
         $schoolColors: #A51C30, #8BB3DA, #B31B1B, #54301A, #B00836, #00205B, #A80532, #00356B;
         @for $i from 1 through 8 {
@@ -540,7 +547,6 @@ main#main-home {
         flex-direction: column;
         .testimonial-box {
           will-change: opacity;
-          opacity: 0;
           padding: 30px;
           margin-top: 30px;
           max-width: 375px;
@@ -642,8 +648,6 @@ main#main-courses {
   .category {
     margin-bottom: 80px;
     width: fit-content;
-    opacity: 0;
-    transform: translate(0, 30px);
   }
   .category-title {
     cursor: pointer;
